test/cases/bad/bad040.lat
// Not callable

class A {

}

int main() {
    new A(3);

    return 0;
}